# casper-market-place

./: .gitignore  readme.md
marketplace/: .env  Makefile
marketplace/contract/: Cargo.toml
marketplace/contract/src/: casmarket_token.rs  casmarket_tokenV0.rs  commissions.rs  market_place_users.rs  minters_control.rs  token_commission..rs
marketplace/keys/: public_key.pem  secret_key.pem
marketplace/tests/: Cargo.toml
marketplace/tests/src/: casmarket_instance.rs  integration_tests.rs  lib.rs
marketplace/tests/wasm/: casmarket_token.wasm
marketplace/ui/: package.json
marketplace/ui/scripts/: deploy.sh  generatekeys.js
marketplace/ui/scripts/casper_keys/: private.pem  public.pem
marketplace/ui/src/: App.vue  main.js
marketplace/ui/src/modals/: PixelModal.vue
marketplace/ui/src/store/: index.js
marketplace/ui/src/views/: GridView.vue  LeaderboardView.vue  OwnedPixels.vue
